@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-04
+2017-04-12 Mikhail S. Dubrovin
+- add functionality of data imaging
+
 Tag: V01-00-03
 2017-04-07 Mikhail S. Dubrovin
 - image input from file is completed as beta version
